--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,9 +10,16 @@ requires-python = ">=3.9"
 dependencies = [
     "flask (>=3.1.0,<4.0.0)",
     "python-whois (>=0.9.5,<0.10.0)",
-    "waitress (>=3.0.2,<4.0.0)"
+    "waitress (>=3.0.2,<4.0.0)",
+    "flask-limiter (>=3.10.1,<4.0.0)",
+    "python-dotenv (>=1.0.1,<2.0.0)",
 ]
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
+pytest-flask = "^1.3.0"
+
