--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,7 @@
 {
     "builds": [{"src": "whoisapi/app.py", "use": "@vercel/python"}],
-    "routes": [{"src": "/(.*)", "dest": "whoisapi/app.py"}]
+    "routes": [{"src": "/(.*)", "dest": "whoisapi/app.py"}],
+    "env": {
+        "ENABLE_RATE_LIMIT": "true"
+    }
 }
