--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -1,8 +1,8 @@
 [phases.setup]
-nixPkgs = ["python311"]
+nixPkgs = ["python311", gunicorn]
 
 [phases.build]
 cmds = ["pip install -r requirements.txt"]
 
 [start]
-cmd = "waitress-serve --host=0.0.0.0 --port=5000 whoisapi.app:app"
+cmd = "gunicorn -w 4 -b 0.0.0.0:5000 whoisapi.app:app"
