--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -5,4 +5,4 @@ nixPkgs = ["python311", gunicorn]
 cmds = ["pip install -r requirements.txt"]
 
 [start]
-cmd = "gunicorn -w 4 -b 0.0.0.0:5000 whoisapi.app:app"
+cmd = ["gunicorn -w 4 -b 0.0.0.0:5000 whoisapi.app:app"]
