--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ colorama==0.4.6
 Deprecated==1.2.18
 Flask==3.1.0
 Flask-Limiter==3.10.1
+gunicorn==23.0.0
 iniconfig==2.0.0
 itsdangerous==2.2.0
 Jinja2==3.1.5
